# sickle-scope

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml
notebooks/: advanced.ipynb  examples.ipynb  tutorial.ipynb
results/: sickle_analysis.csv  sickle_report.html
results/tutorial_analysis_20250909_190044/: analysis_statistics.json  clinical_focused_results.csv  clinical_summary_report.txt  complete_variant_analysis.csv  patient_friendly_summary.txt
sickle_scope/: __init__.py  analyser.py  cli.py  ml_models.py  utils.py  visualiser.py
sickle_scope/data/: hbb_variants.json
tests/: __init__.py  test_analyser.py  test_cli.py  test_integration.py  test_visualiser.py
tests/sample_data/: hbb_variants.csv  invalid_data.csv  test_variants.csv
